trunk/Archive/0ef4856479963b3347701e464d0a3021-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In destructor 'T::~T()':
main.cpp:18:21: error: expected type-specifier before '.' token
             } catch(..) {
                     ^
main.cpp:18:21: error: expected ')' before '.' token
main.cpp:18:21: error: expected '{' before '.' token
main.cpp:18:21: error: expected primary-expression before '.' token
main.cpp:18:22: error: expected unqualified-id before '.' token
             } catch(..) {
                      ^
main.cpp:18:23: error: expected unqualified-id before ')' token
             } catch(..) {
                       ^
main.cpp:18:23: error: expected ';' before ')' token
